@@ -159,87 +159,6 @@ class ContactModelContact extends JModelAdmin
 	}
 
 	/**
-	 * Method to perform batch operations on a category or a set of contacts.
-	 *
-	 * @param	array	$commands	An array of commands to perform.
-	 * @param	array	$pks		An array of category ids.
-	 *
-	 * @return	boolean	Returns true on success, false on failure.
-	 * @since	1.6
-	 */
-	function batch($commands, $pks)
-	{
-		// Sanitize user ids.
-		$pks = array_unique($pks);
-		JArrayHelper::toInteger($pks);
-
-		// Remove any values of zero.
-		if (array_search(0, $pks, true)) {
-			unset($pks[array_search(0, $pks, true)]);
-		}
-
-		if (empty($pks)) {
-			$this->setError(JText::_('COM_CONTACT_NO_ITEM_SELECTED'));
-			return false;
-		}
-
-		$done = false;
-
-		if (!empty($commands['assetgroup_id'])) {
-			if (!$this->_batchAccess($commands['assetgroup_id'], $pks)) {
-				return false;
-			}
-			$done = true;
-		}
-
-		if (!empty($commands['menu_id'])) {
-			$cmd = JArrayHelper::getValue($commands, 'move_copy', 'c');
-
-			if ($cmd == 'c' && !$this->_batchCopy($commands['menu_id'], $pks)) {
-				return false;
-			}
-			else if ($cmd == 'm' && !$this->_batchMove($commands['menu_id'], $pks)) {
-				return false;
-			}
-			$done = true;
-		}
-
-		if (!$done) {
-			$this->setError('COM_MENUS_ERROR_INSUFFICIENT_BATCH_INFORMATION');
-			return false;
-		}
-
-		return true;
-	}
-
-	/**
-	 * Batch access level changes for a group of rows.
-	 *
-	 * @param	int		$value	The new value matching an Asset Group ID.
-	 * @param	array	$pks	An array of row IDs.
-	 *
-	 * @return	booelan	True if successful, false otherwise and internal error is set.
-	 * @since	1.6
-	 */
-	protected function _batchAccess($value, $pks)
-	{
-		$table = $this->getTable();
-		foreach ($pks as $pk)
-		{
-			$table->reset();
-			$table->load($pk);
-			$table->access = (int) $value;
-
-			if (!$table->store()) {
-				$this->setError($table->getError());
-				return false;
-			}
-		}
-
-		return true;
-	}
-
-	/**
 	 * Prepare and sanitise the table prior to saving.
 	 *
 	 * @param	JTable	$table
